<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE FSR Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="no_pressure">No Pressure</string>
    <string name="start_scan">Start Scan</string>
    <string name="clear_previous_data">Clear Previous Data</string>
    <string name="save_data">Save Data</string>

    <string name="fsr">FSR</string>
    <string name="up_load_success">Up Load Success</string>
    <string name="time">Time:</string>

    <string name="average">Average:</string>
    <string name="right_front">Right Front:</string>
    <string name="right_rear">Right Rear:</string>
    <string name="left_rear">Left Rear:</string>
    <string name="left_front">Left Front:</string>
    <string name="general_scan_mode">General Scan Mode</string>
    <string name="_30_second_test_mode">30 Second Test Mode</string>
    <string name="timer">Timer:</string>
    <string name="times_text">times_text</string>
    <string name="timer_text">timer_text</string>
    <string name="_0">0</string>
    <string name="seconds">seconds</string>
    <string name="s">s</string>
    <string name="times">Times</string>
    <string name="time_delay_s">Time Delay (s)</string>
    <string name="_30">30</string>
    <string name="_30_000">30.000</string>
    <string name="lite_version">Lite Version</string>
    <string name="full_version">Full Version</string>
    <string name="_30_seconds_test_mode">30 Seconds Test Mode</string>
    <string name="top_left">Top Left:</string>
    <string name="top_right">Top Right:</string>
    <string name="buttom_left">Buttom Left:</string>
    <string name="buttom_right">Buttom Right:</string>
    <string name="_30_seconds_sitting_test_mode">Thirty Seconds Sitting Test Mode</string>
    <string name="this_version_shows_only_one_figure_of_the_average_pressure_but_still_can_calculus_the_time_delay_and_times_if_your_phone_using_a_low_level_cpu_this_version_could_be_fit_on_your_phone">This version shows only one figure of the average pressure, but still can calculus the time delay and times. If your phone is using a low level CPU, this version could be fit on your phone.</string>
    <string name="this_version_shows_all_fsr_pressures_and_the_avreage_pressure_in_5_figures_and_calculus_the_time_delay_and_times">This version shows all FSR pressures and the avreage pressure in 5 figures, and calculus the time delay and times.</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="sitting_pressure_distribution_mode">Simple Sitting Posture Pressure Detection Mode</string>
    <string name="clear_data">Clear Data</string>
    <string name="years_old">years old</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>


</resources>
